--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,10 @@ requires-python = ">=3.13"
 dependencies = [
     "aiogram>=3.20.0",
     "alembic>=1.15.2",
-    "psycopg[binary,sqlalchemy]>=3.2.6",
+    "psycopg[binary]>=3.2.6",
     "pydantic>=2.11.3",
     "pydantic-settings>=2.8.1",
+    "pytz>=2025.2",
     "redis>=5.2.1",
     "sqlalchemy>=2.0.40",
     "tenacity>=9.1.2",
