Add admin dashboard

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,14 @@ RULES_URL=
 
 TIMEZONE=
 
+ADMIN_HOST=
+ADMIN_PORT=
+ADMIN_ENDPOINT=
+ADMIN_SECRET_TOKEN=
+ADMIN_ACCESS_TOKEN_EXPIRE_MINUTES=
+ADMIN_USERNAME=
+ADMIN_PASSWORD=
+
 REDIS_HOST=redis
 REDIS_PORT=
 REDIS_DB=
