--- a/compose.yml
+++ b/compose.yml
@@ -117,7 +117,7 @@ services:
     container_name: pushups-redis
     image: redis:7-bookworm
     healthcheck:
-      test: ["CMD-SHELL", "redis-cli ping | grep PONG"]
+      test: ["CMD-SHELL", "redis-cli -p ${REDIS_PORT} ping | grep PONG"]
       interval: 1s
       timeout: 3s
       retries: 5
@@ -125,6 +125,7 @@ services:
       - "${REDIS_PORT}:6379"
     volumes:
       - redis_data:/data
+    command: --port ${REDIS_PORT}
   
   db:
     image: postgres:17-bookworm
@@ -139,10 +140,11 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -p ${POSTGRES_PORT}"]
       interval: 10s
       timeout: 5s
       retries: 5
+    command: -p ${POSTGRES_PORT}
 
 volumes:
   redis_data:
