Add points to users

--- a/compose.yml
+++ b/compose.yml
@@ -140,11 +140,11 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -p ${POSTGRES_PORT}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 10s
       timeout: 5s
       retries: 5
-    command: -p ${POSTGRES_PORT}
+    # command: -p ${POSTGRES_PORT}
 
 volumes:
   redis_data:
